--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: actions-rs/clippy-check@v1.0.7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -D warnings
+          args: --all-targets --all-features -- -D warnings
 
   coverage:
     name: Code coverage
