--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/lib.rs"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
+serde = {version = "1.0.152", features=["derive"]}
 
 [dev-dependencies]
 reqwest = "0.11"
