--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,18 @@ actix-web = "4"
 tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 serde = {version = "1.0.152", features=["derive"]}
 
+#table-like syntax to avoid long lines
+[dependencies.sqlx]
+version="0.6"
+default-features=false
+features= [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono"
+    "migrate"
+]
+
 [dev-dependencies]
 reqwest = "0.11"
