--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,19 +16,9 @@ path = "src/lib.rs"
 actix-web = "4"
 tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 serde = {version = "1.0.152", features=["derive"]}
+sqlx = {version = "0.6.2", default-features=false, features=["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]}
+config = "0.13.1"
 
-#table-like syntax to avoid long lines
-[dependencies.sqlx]
-version="0.6"
-default-features=false
-features= [
-    "runtime-tokio-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono"
-    "migrate"
-]
 
 [dev-dependencies]
 reqwest = "0.11"
