--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 serde = {version = "1.0.152", features=["derive"]}
 sqlx = {version = "0.6.2", default-features=false, features=["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]}
 config = "0.13.1"
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+
 
 
 [dev-dependencies]
