--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,10 @@ sqlx = {version = "0.6.2", default-features=false, features=["runtime-actix-rust
 config = "0.13.1"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
-
+tracing = {version="0.1.37", features=["log"]}
+tracing-subscriber={version="0.3", features=["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
 
 
 [dev-dependencies]
