--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -47,7 +47,7 @@ jobs:
           components: clippy
       - uses: actions-rs/clippy-check@v1.0.7
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CLIPPY_SECRET }}
           args: --all-targets --all-features -- -D warnings
 
   coverage:
@@ -56,7 +56,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
